tests/errors/e_func_in_pxd_support.pxd
cdef foo():
    return 1

cdef public inline foo2():
    return 1

cdef api inline foo3():
    return 1
